Refactoring & Test.